add alarm email to  doc_dssm_indexer

--- a/doc_dssm_indexer/conf/module.conf
+++ b/doc_dssm_indexer/conf/module.conf
@@ -15,7 +15,7 @@ LOCAL_BIN_PATH=${LOCAL_WORK_PATH}/bin
 LOCAL_CONF_PATH=${LOCAL_WORK_PATH}/conf
 LOCAL_DATA_PATH=${LOCAL_WORK_PATH}/data
 LOCAL_LOG_PATH=${LOCAL_WORK_PATH}/log
-ALARM_EMAILS="shufei.liang@newsbreak.com"
+ALARM_EMAILS="shufei.liang@newsbreak.com,hengda.qi@newsbreak.com"
 
 source ${LOCAL_CONF_PATH}/hadoop.conf
 
