--- a/user_tw_chn_v2/conf/hadoop.conf
+++ b/user_tw_chn_v2/conf/hadoop.conf
@@ -15,6 +15,6 @@ HDFS_WORK_PATH=${HDFS_ROOT_PATH}/${MODULE_NAME}
 HDFS_TMP_PATH=${HDFS_WORK_PATH}/temp
 
 JOB_NAME_PREFIX=wangcong_${MODULE_NAME}
-DEFAULT_JOB_QUEUE=model
+DEFAULT_JOB_QUEUE=profile
 
 DEFAULT_ARGUMENTS="-D mapreduce.map.max.attempts=2 -D mapreduce.reduce.maxattempts=2 -D mapreduce.input.fileinputformat.split.minsize=671088640 -D yarn.app.mapreduce.am.resource.mb=8192 -D mapreduce.job.ubertask.enable=true -D yarn.app.mapreduce.am.command-opts=-Xmx3000m -D fs.s3a.retry.limit=100 -D fs.s3a.retry.interval=1000ms -D fs.s3a.retry.throttle.limit=100 -D fs.s3a.retry.throttle.interval=1s"
