--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ offline_ctr_dumper/bin/cluster_topchn
 offline_ctr_dumper/bin/doc_city_ctr
 offline_ctr_dumper/bin/doc_relevance
 offline_ctr_dumper/bin/offline_ctr_dumper
+offline_ctr_dumper/bin/user_cluster_similarity
