disable write scylla for user_cluster task

--- a/user_cluster/conf/module.conf
+++ b/user_cluster/conf/module.conf
@@ -22,7 +22,7 @@ source ${LOCAL_CONF_PATH}/hadoop.conf
 
 START_CMD="bash -x ${LOCAL_BIN_PATH}/run.sh ${MODULE_CONF_FILE}"
 
-WRITE_TO_UPS="TRUE"
+WRITE_TO_UPS="FALSE"
 
 UPS_HOST=user-profile-offline.ha.nb.com
 UPS_PORT=9999
