update user_cluster task

--- a/user_cluster_new/conf/module.conf
+++ b/user_cluster_new/conf/module.conf
@@ -17,16 +17,16 @@ LOCAL_CONF_PATH=${LOCAL_WORK_PATH}/conf
 LOCAL_DATA_PATH=${LOCAL_WORK_PATH}/data
 LOCAL_LOG_PATH=${LOCAL_WORK_PATH}/log
 
-ALARM_EMAILS="shufei.liang@newsbreak.com"
+ALARM_EMAILS="hengda.qi@newsbreak.com,shufei.liang@newsbreak.com"
 source ${LOCAL_CONF_PATH}/hadoop.conf
 
 START_CMD="bash -x ${LOCAL_BIN_PATH}/run.sh ${MODULE_CONF_FILE}"
 
-WRITE_TO_UPS="FALSE"
+WRITE_TO_UPS="TRUE"
 
 UPS_HOST=user-profile-offline.ha.nb.com
 UPS_PORT=9999
-UPS_PROFILE=sem_em_decay_v2
+UPS_PROFILE=sem_em_decay
 UPS_VERSION=0
 UPS_BATCH=300
 UPS_FORMAT=string
