del hot_doc_decay exp config

--- a/offline_ctr_dumper/conf/grouped_ctr.conf
+++ b/offline_ctr_dumper/conf/grouped_ctr.conf
@@ -38,7 +38,7 @@ OUTPUT_FORMAT="org.apache.hadoop.mapred.TextOutputFormat"
 
 # upload files
 CACHE_ARCHIVES=()
-UPLOAD_FILES=("${LOCAL_BIN_PATH}/offline_ctr_dumper" "/mnt/models/foryou/hot_doc_decay_wei.txt")
+UPLOAD_FILES=("${LOCAL_BIN_PATH}/offline_ctr_dumper")
 
 # task num
 MAP_TASKS=300
