--- a/doc_dssm_indexer/conf/filter_doc.conf
+++ b/doc_dssm_indexer/conf/filter_doc.conf
@@ -1,7 +1,7 @@
 #!/bin/bash
 STREAMING_TYPE=streaming
 MAPRED_JOB_NAME=${JOB_NAME_PREFIX}_filter_doc
-MAPRED_INPUT_PATH=s3a://hdfs.bak/us/user/hive/warehouse/stage.db/cpp/document/pdate=${DOC_DATE_FLAG}/phour=${HOUR_FLAG}/hdfs-*
+MAPRED_INPUT_PATH=s3a://cpp-us-pmi/cpp_documents/pdate=${DOC_DATE_FLAG}/phour=${HOUR_FLAG}/*.gz
 MAPRED_OUTPUT_PATH=${HDFS_WORK_PATH}/doc/${DATE_FLAG}/${HOUR_FLAG}
 MAPRED_TMP_PATH=${HDFS_TMP_PATH}
 
@@ -9,7 +9,7 @@ MAPPER_CMD="python filter_docs.py"
 REDUCER_CMD="cat"
 
 # format
-INPUT_FORMAT="org.apache.hadoop.mapred.SequenceFileInputFormat"
+INPUT_FORMAT="org.apache.hadoop.mapred.TextInputFormat"
 OUTPUT_FORMAT="org.apache.hadoop.mapred.TextOutputFormat"
 
 # upload files
