increase memory of chn_clustered_ctr

--- a/offline_ctr_dumper/conf/module.conf
+++ b/offline_ctr_dumper/conf/module.conf
@@ -17,7 +17,7 @@ LOCAL_BIN_PATH=${LOCAL_WORK_PATH}/bin
 LOCAL_CONF_PATH=${LOCAL_WORK_PATH}/conf
 LOCAL_DATA_PATH=${LOCAL_WORK_PATH}/data
 LOCAL_LOG_PATH=${LOCAL_WORK_PATH}/log
-ALARM_EMAILS="shufei.liang@newsbreak.com,xingni.li@newsbreak.com"
+ALARM_EMAILS="shufei.liang@newsbreak.com,jiahao.deng@newsbreak.com"
 
 # nfs path
 NFS_DOC_PROFILE_PATH=/mnt/models/doc-profile
