--- a/offline_ctr_dumper/conf/nonnews_user_clustr_topdoc.conf
+++ b/offline_ctr_dumper/conf/nonnews_user_clustr_topdoc.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 STREAMING_TYPE=streaming
-MAPRED_JOB_NAME=${JOB_NAME_PREFIX}_user_cluster_topdoc_${__POSTFIX__}${__DROP__}
+MAPRED_JOB_NAME=${JOB_NAME_PREFIX}_nonnews_user_cluster_topdoc_${__POSTFIX__}${__DROP__}
 
 function gen_doc_input() {
     local key_dir=${HDFS_WORK_PATH}/cjv
@@ -22,11 +22,11 @@ function gen_doc_input() {
 }
 
 MAPRED_INPUT_PATH=`gen_doc_input`
-MAPRED_OUTPUT_PATH=${HDFS_WORK_PATH}/user_cluster_topdoc_${__POSTFIX__}${__DROP__}/${DATE_FLAG}/${HOUR_FLAG}
+MAPRED_OUTPUT_PATH=${HDFS_WORK_PATH}/nonnews_user_cluster_topdoc_${__POSTFIX__}${__DROP__}/${DATE_FLAG}/${HOUR_FLAG}
 MAPRED_TMP_PATH=${HDFS_TMP_PATH}
 
-MAPPER_CMD="./offline_ctr_dumper -alsologtostderr=true -stage=user_cluster_topdoc_mapper -postfix=${__POSTFIX__}"
-REDUCER_CMD="./offline_ctr_dumper -alsologtostderr=true -stage=user_cluster_topdoc_reducer -postfix=${__POSTFIX__}"
+MAPPER_CMD="./offline_ctr_dumper -alsologtostderr=true -stage=nonnews_user_cluster_topdoc_mapper -postfix=${__POSTFIX__}"
+REDUCER_CMD="./offline_ctr_dumper -alsologtostderr=true -stage=nonnews_user_cluster_topdoc_reducer -postfix=${__POSTFIX__}"
 if [ -n "${__DROP__}" ]; then
     MAPPER_CMD=${MAPPER_CMD}" -drop=${__DROP__}"
     REDUCER_CMD=${REDUCER_CMD}" -drop=${__DROP__}"
@@ -51,5 +51,5 @@ JOB_QUEUE=offline
 # other arguments
 ARGUMENTS="-D mapred.job.map.memory.mb=4000 -D mapred.job.reduce.memory.mb=18000 -D mapred.reduce.slowstart.completed.maps=0.95 -D mapreduce.jobtracker.split.metainfo.maxsize=-1 -D mapred.max.map.failures.percent=1"
 CHECK_OUTPUT="TRUE"
-COPY_TO_LOCAL=${LOCAL_DATA_PATH}/user_cluster_topdoc_${__POSTFIX__}${__DROP__}/${DATE_FLAG}/${HOUR_FLAG}
+COPY_TO_LOCAL=${LOCAL_DATA_PATH}/nonnews_user_cluster_topdoc_${__POSTFIX__}${__DROP__}/${DATE_FLAG}/${HOUR_FLAG}
 
