--- a/doc_dssm_indexer/conf/hadoop.conf
+++ b/doc_dssm_indexer/conf/hadoop.conf
@@ -10,7 +10,7 @@ HADOOP_UGI=
 STREAMING_CMD="jar /opt/cloudera/parcels/CDH/lib/hadoop-mapreduce/hadoop-streaming-2.6.0-cdh5.16.1.jar"
 
 # hdfs conf
-HDFS_ROOT_PATH=s3a://pm-hdfs2/user/wangcong
+HDFS_ROOT_PATH=s3a://pm-hdfs2/user/matao
 HDFS_WORK_PATH=${HDFS_ROOT_PATH}/${MODULE_NAME}
 HDFS_TMP_PATH=${HDFS_WORK_PATH}/temp
 
