increase longterm_tct mem

--- a/offline_ctr_dumper/conf/nonnews_chn_cfb_topdoc.conf
+++ b/offline_ctr_dumper/conf/nonnews_chn_cfb_topdoc.conf
@@ -51,8 +51,8 @@ UPLOAD_FILES=("${LOCAL_BIN_PATH}/offline_ctr_dumper" "${LOCAL_DATA_PATH}/topdoc_
 # task num
 MAP_TASKS=300
 MAP_TASKS_CAPACITY=300
-REDUCE_TASKS=10
-REDUCE_TASKS_CAPACITY=10
+REDUCE_TASKS=1
+REDUCE_TASKS_CAPACITY=1
 JOB_PRIORITY=HIGH
 JOB_QUEUE=offline
 
